letter spacing fixed

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     line-height: 90%;
     border-left: 5px solid #EF5DA8;
     padding-left: 7px;
-    letter-spacing: 5px;
     margin-top: 150px;
 }
 .pink-color{
